--- a/about.html
+++ b/about.html
@@ -101,20 +101,20 @@
             <hr>
             <div>
                 <h1 style="color:#00CED1;font-size:40px;font-family:Courier;margin:30px;margin-top: 50px;" align="center">Activities</h1>
-                <div class="card-deck center">
+                <div class="card-deck center" >
                     <div class="card card-body h-100 shadow p-3 mb-5 rounded" align="center">
                         <div align="center">
                             <span class="fa-stack fa-4x"><i class="fa fa-group fa-stack-4x"></i></span>
                         </div>
                         <h4 class="card-title text-center">Live Session</h4>
-                        <p class="card-text  text-center"> Conducting Live Session for learning new things </p>
+                        <p class="card-text  text-center"> We will conduct Live sessions and webinars for the students who are going to put their first step in the Information Security Domain. Gradually, we will increase the level of the sessions & webinars engaging the students in more of a practical environment along with theoretical knowledge </p>
                     </div>
                     <div class="card card-body h-100 shadow p-3 mb-5 rounded" align="center">
                         <div align="center">
                             <span class="fa-stack fa-4x"><i class="fa fa-flag fa-stack-4x"></i></span>
                         </div>
                         <h4 class="card-title text-center">Capture The Flag</h4>
-                        <p class="card-text  text-center"> Hosting CTF Challenges for the students for testing their skills </p>
+                        <p class="card-text  text-center"> We will post CTF challenges specifically for the club's members every week or every month so that they can measure their skills and improve themselves by taking the guidance from the experts </p>
                     </div>
                 </div>
                 <div class="card-deck center">
@@ -123,14 +123,14 @@
                             <span class="fa-stack fa-4x"><i class="fa fa-video-camera fa-stack-4x"></i></span>
                         </div>
                         <h4 class="card-title text-center">Webinar</h4>
-                        <p class="card-text  text-center"> Conducting Webinars & Online Sessions for spreading the knowledge of latest Cyber Security trends </p>
+                        <p class="card-text  text-center"> Conducting Webinars & Online Sessions every semester for spreading the knowledge and introduced with the leading industry experts, latest Cyber Security trends and learn from the talks they will conduct </p>
                     </div>
                     <div class="card card-body h-100 shadow p-3 mb-5 rounded" align="center">
                         <div align="center">
                             <span class="fa-stack fa-4x"><i class="fa fa-puzzle-piece fa-stack-4x"></i></span>
                         </div>
                         <h4 class="card-title text-center">Quiz Competition</h4>
-                        <p class="card-text  text-center"> Organizing Quizzes for sharpening their Infosec knowledge </p>
+                        <p class="card-text  text-center"> Organizing Quizzes for testing their ideas, showing of the talent, sharpening their Infosec knowledge </p>
                     </div>
                 </div>
             </div>
