--- a/about.html
+++ b/about.html
@@ -114,7 +114,8 @@
                             <span class="fa-stack fa-4x"><i class="fa fa-flag fa-stack-4x"></i></span>
                         </div>
                         <h4 class="card-title text-center">Capture The Flag</h4>
-                        <p class="card-text  text-center"> We will post CTF challenges specifically for the club's members every week or every month so that they can measure their skills and improve themselves by taking the guidance from the experts </p>
+                        <p class="card-text  text-center"> We will post CTF challenges specifically for the club's members every week or every month so that they can measure their skills and improve themselves by taking the guidance from the experts <br><br></p>
+                        
                     </div>
                 </div>
                 <div class="card-deck center">
@@ -130,7 +131,8 @@
                             <span class="fa-stack fa-4x"><i class="fa fa-puzzle-piece fa-stack-4x"></i></span>
                         </div>
                         <h4 class="card-title text-center">Quiz Competition</h4>
-                        <p class="card-text  text-center"> Organizing Quizzes for testing their ideas, showing of the talent, sharpening their Infosec knowledge </p>
+                        <p class="card-text  text-center"> Organizing Quizzes for testing their ideas, showing of the talent, sharpening their Infosec knowledge <br><br></p>
+                        
                     </div>
                 </div>
             </div>
