--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -4,12 +4,9 @@
 <head>
     <meta charset="utf-8">
     <title>TCA - Code of Conduct</title>
-    <meta name="description" content="particles.js is a lightweight JavaScript library for creating particles.">
-    <meta name="author" content="Vincent Garreau" />
+    <meta name="description" content="Make sure that you have read and are agree with our Code of Conduct.">
+    <meta name="author" content="The Cyber Alliance - TCA" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
-
-    <!-- <link rel="stylesheet" media="screen" href="css/style.css"> -->
     <link rel="stylesheet" href="css/bootstrap4-neon-glow.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -58,7 +55,7 @@
                     more than happy to address your concerns. </p><br>
                 <p>For any complaints or suggestions, you may fill up this form: &nbsp;
                     <a href="https://forms.gle/vX4JE4LUteCVdG4s7">https://forms.gle/vX4JE4LUteCVdG4s7</a></p>
-                <p>For more queries, you may contact us on &nbsp; <a href="mailto:patelmit2012@gmail.com">patelmit2012@gmail.com</a></p><br>
+                <p>For more queries, you may contact us on &nbsp; <a href="mailto:tca.sitaics@gmail.com">tca.sitaics@gmail.com</a></p><br>
                 <h4>
                     <p>Regards,</p>
                 </h4>
@@ -69,13 +66,7 @@
         </div>
     </section>
     <footer></footer>
-    <!-- scripts -->
-    <script src="js/particles.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/lib/stats.js"></script>
 
-    <!-- stats.js -->
-    <script src="js/lib/stats.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
