Added Team Information

--- a/events.html
+++ b/events.html
@@ -120,7 +120,7 @@
                 <br>
                 <div class="webinar">
                     <h1>Introducing The Cyber Allianc<span class="vim-caret backWhite">e</span></h1>
-                    <h3 class="text-muted">A perfect kickstart for your learning adventure..<span class="vim-caret backWhite">.</span></h3><br />
+                    <h3 class="text-muted">A perfect kickstart for your learning adventure...</h3><br />
 
                     <h4>12<sup>th</sup> October, 2020</h4>
                     <h5>04:00 PM - 06:00 PM</h5><br>
