--- a/team-tca.html
+++ b/team-tca.html
@@ -305,18 +305,16 @@
             image: "Rahul.jpg",
             name: "Rahul Vaghela",
             pos: "CTF Developer & Forensics",
-            github: "",
-            twitter: "",
-            linkedin: "",
-            instagram: "",
+            github: "https://github.com/nilayshah102",            
+            linkedin: "https://www.linkedin.com/in/shah-nilay-154011154",
+            instagram: "https://www.instagram.com/nil_shah5000/",
         }, {
             image: "Nilay.jpg",
             name: "Nilay Shah",
             pos: "CTF Developer & Forensics",
-            github: "",
-            twitter: "",
-            linkedin: "",
-            instagram: "",
+            github: "https://github.com/Rahul1899",            
+            linkedin: "http://www.linkedin.com/in/rahul-vaghela18",
+            instagram: "https://www.instagram.com/rahul_vaghela_bapu/",
         }, {
             image: "Kesha.jpg",
             name: "Kesha Kaneria",
