--- a/team-tca.html
+++ b/team-tca.html
@@ -305,16 +305,17 @@
             image: "Rahul.jpg",
             name: "Rahul Vaghela",
             pos: "CTF Developer & Forensics",
-            github: "https://github.com/nilayshah102",            
-            linkedin: "https://www.linkedin.com/in/shah-nilay-154011154",
-            instagram: "https://www.instagram.com/nil_shah5000/",
+            github: "https://github.com/Rahul1899",            
+            linkedin: "http://www.linkedin.com/in/rahul-vaghela18",
+            instagram: "https://www.instagram.com/rahul_vaghela_bapu/",
         }, {
             image: "Nilay.jpg",
             name: "Nilay Shah",
             pos: "CTF Developer & Forensics",
-            github: "https://github.com/Rahul1899",            
-            linkedin: "http://www.linkedin.com/in/rahul-vaghela18",
-            instagram: "https://www.instagram.com/rahul_vaghela_bapu/",
+            github: "https://github.com/nilayshah102",            
+            linkedin: "https://www.linkedin.com/in/shah-nilay-154011154",
+            instagram: "https://www.instagram.com/nii_l_ayyy/",
+            
         }, {
             image: "Kesha.jpg",
             name: "Kesha Kaneria",
