--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     </div>
 
     <footer>
-        <div class="fixed-bottom pb-2 pt-2 text-white text-center">
+        <div class="fixed-bottom pb-2 pt-2 text-white text-center" style="background-color: rgb(52, 58, 64, 0.4);">
             In Association with Student Development Cell at <a href="https://rsu.ac.in/home/">Rashtriya Raksha University</a><br /> Managed by students of <a href="https://rsu.ac.in/school-of-information-technology-and-cyber-security/">SITAICS</a>
         </div>
     </footer>
