--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="An Information Security Student's Club at Rashtriya Raksha University">
     <meta name="author" content="The Cyber Alliance - TCA" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="icon" type="image/png" href="media/favicon.png">
 
     <link rel="stylesheet" media="screen" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap4-neon-glow.css" />
