--- a/team-tca.html
+++ b/team-tca.html
@@ -129,7 +129,7 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="Image/Priyank.jpg" alt="Avatar" style="width:300px;height:300px;">
+                        <img src="Image/Priyank.jpeg" alt="Avatar" style="width:300px;height:300px;  filter: grayscale(100%);">
                     </div>
                     <div class="flip-card-back">
                         <h2>Priyank Parmar</h2>
