Added Watch Live

--- a/events.html
+++ b/events.html
@@ -124,7 +124,7 @@
 
                     <h4>12<sup>th</sup> October, 2020</h4>
                     <h5>04:00 PM - 06:00 PM</h5><br>
-                    <button onclick="window.open('https:\/\/forms.gle\/xV2ENBUAhtai6Nrz7')" class="btn btn-lg text-white btn-outline-info btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left">Register Now</button>
+                    <button onclick="window.open('https:\/\/youtu.be\/BdkJ0W4wS4s')" class="btn btn-lg text-white btn-outline-info btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left">Watch Live</button>
                 </div>
             </div>
             <div class="col-md-5 hidden-xs" style="padding-right:100px;padding-top:100px;">
