Added New Event

--- a/events.html
+++ b/events.html
@@ -119,12 +119,12 @@
                 </h1>
                 <br>
                 <div class="webinar">
-                    <h1>Introducing The Cyber Allianc<span class="vim-caret backWhite">e</span></h1>
-                    <h3 class="text-muted">A perfect kickstart for your learning adventure...</h3><br />
+                    <h1>Introduction to Linux & Shel<span class="vim-caret backWhite">l</span></h1>
+                    <h3 class="text-muted">Basic Linux and Shell Programming for absolute beginners...</h3><br />
 
-                    <h4>12<sup>th</sup> October, 2020</h4>
-                    <h5>04:00 PM - 06:00 PM</h5><br>
-                    <button onclick="window.open('https:\/\/youtu.be\/BdkJ0W4wS4s')" class="btn btn-lg text-white btn-outline-info btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left">Watch Live</button>
+                    <h4>25<sup>th</sup> October, 2020</h4>
+                    <h5>TBD</h5><br>
+                    <button onclick="#" class="btn btn-lg text-white btn-outline-info btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left">Register Now</button>
                 </div>
             </div>
             <div class="col-md-5 hidden-xs" style="padding-right:100px;padding-top:100px;">
@@ -167,7 +167,7 @@
                 // [string|object]
                 // Selector for children of `itemContainer` to flip
 
-                start: 0,
+                start: 1,
                 // ['center'|number]
                 // Zero based index of the starting item, or use 'center' to start in the middle
 
