Added New Event

--- a/events.html
+++ b/events.html
@@ -122,9 +122,9 @@
                     <h1>Introduction to Linux & Shel<span class="vim-caret backWhite">l</span></h1>
                     <h3 class="text-muted">Basic Linux and Shell Programming for absolute beginners...</h3><br />
 
-                    <h4>25<sup>th</sup> October, 2020</h4>
-                    <h5>TBD</h5><br>
-                    <button onclick="#" class="btn btn-lg text-white btn-outline-info btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left">Register Now</button>
+                    <h4>22<sup>nd</sup> November, 2020</h4>
+                    <h5>10:00 AM Onwards</h5><br>
+                    <button onclick='window.open("https://forms.gle/zkvyNAePKpHK5iKu8")' class="btn btn-lg text-white btn-outline-info btn-shadow px-3 my-2 ml-0 ml-sm-1 text-left">Register Now</button>
                 </div>
             </div>
             <div class="col-md-5 hidden-xs" style="padding-right:100px;padding-top:100px;">
