--- a/team-tca.html
+++ b/team-tca.html
@@ -162,7 +162,7 @@
         var files = [{
             image: "Mit.jpg",
             name: "Mit Patel",
-            pos: "Leader",
+            pos: "Lead",
             github: "https://github.com/Mit-Patel/",
             twitter: "https://twitter.com/AstarkIV",
             linkedin: "https://www.linkedin.com/in/mitpatel67/",
