--- a/team-tca.html
+++ b/team-tca.html
@@ -133,7 +133,7 @@
                     </div>
                     <div class="flip-card-back">
                         <h2>Priyank Parmar</h2>
-                        <h5 class="text-grey">Mentor</h5>
+                        <h5 class="text-grey">Assistant Professor & Mentor</h5>
                     </div>
                 </div>
             </div>
